<resources>
    <string name="app_name">Nutriplan</string>

    <string name="hello_world">Hello world! and this is a nutrition app</string>
    <string name="action_settings">Settings</string>
    <string name="dailyplan">Daily Plan</string>
    <string name="calc">NutriCalc</string>
    <string name="calculate">calculate</string>
    <string name="tips">Health Tips</string>
    <string name="dairy">Meal Diary</string>
    <string name="diary">Nutri Diary</string>
    <string name="about">About</string>
    <string name="title_activity_daily_plan">Daily Plan</string>
    <string name="title_activity_nutri_calc">Nutri Calc</string>
    <string name="title_activity_health_tips">" Health Tips"</string>
    <string name="title_activity_meal_dairy">" Nutri Diary"</string>
    <string name="title_activity_nutri_calculator">Nutri Calculator</string>
    <string name="share0">Don’t substitute fruit juices for whole fruits.</string>
    <string name="share1">Eat whole, fresh, unprocessed foods.</string>
    <string name="share2">When buying packaged foods, read the nutrition labels carefully.</string>
    <string name="share3">Never cut any food group out of your diet including carbohydrates.</string>
    <string name="share4">Don’t eat too much or until you’re stuffed.</string>
    <string name="share5">Eat something every four hours.</string>
    <string name="share6">Don’t take more than one all-purpose multivitamin daily.</string>
    <string name="share7">Exercise is important to burn your food efficiently.</string>
    <string name="share8">Before following a nutrition plan, check the credentials of the creator.</string>
    <string name="share9">Keep track of your food intake to know which food group you need to eat more or less from.</string>
    <string name="share10">Eat a variety of foods.</string>
    <string name="share11">Take the skin off before eating chicken.</string>
    <string name="share12">Eat fish at least once a week.</string>
    <string name="share13">Cut back on margarine.</string>
    <string name="share14">When eating outside, watch out for large portion sizes.</string>
    <string name="share15">Desserts should be kept to minimum.</string>
    <string name="share16">Use extra virgin olive oil for salads or whenever suitable.</string>
    <string name="share17">Buy low fat versions of dairy products.</string>
    <string name="share18">Eat oily fish like salmon or sardine at least twice a week (rich in Omega-3)</string>
    <string name="share19">Never smoke after eating.</string>
    <string name="share20">Don’t eat fruits immediately after meal.</string>
    <string name="share21">Replace tea with green tea.</string>
    <string name="share22">Don’t sleep immediately after eating.</string>
    <string name="share23">Apples protect your heart.</string>
    <string name="share24">Bananas strengthen bones.</string>
    <string name="share25">Broccoli combats cancer.</string>
    <string name="share26">Carrots save eyesight.</string>
    <string name="share27">Fish boosts memory.</string>
    <string name="share28">Garlic kills bacteria.</string>
    <string name="share29">Honey increases energy.</string>
    <string name="share30">Lemons smoothen skin.</string>
    <string name="share31">Mushrooms control blood pressure.</string>
    <string name="share">share</string>
    <string name="wt">Enter weigth (kg)</string>
    <string name="ht">Enter height(cm)</string>
    <string name="age">Enter age</string>
    <string name="calculator">calculate</string>
    <string name="action_create">Create</string>
    <string name="title_activity_note_editor">NoteEditorActivity</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="history">history</string>
    <string name="graph">graph</string>
    <string name="title_activity_history">History</string>
    <string name="enter">Current Weight</string>
    <string name="title_activity_simple_scanner">SimpleScannerActivity</string>
    <string name="weight_required">Weight required</string>

    <!--scanner strings-->
    <string name="scanner_activity">Scanner</string>
    <string name="scanner_fragment_activity">ZXing Scanner - Full Fragment Activity</string>
    <string name="simple_scanner_activity">ZXing Scanner - Simple Activity</string>
    <string name="simple_scanner_fragment_activity">ZXing Scanner - Simple Fragment Activity</string>
    <string name="simple_activity_sample">Simple Activity Sample</string>
    <string name="simple_fragment_sample">Simple Fragment Sample</string>
    <string name="activity_sample">Full Activity Sample</string>
    <string name="fragment_sample">Full Fragment Sample</string>
    <string name="toggle_flash">Flash</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="title_activity_login">Login</string>
    <string name="key">437543463091342</string>
    <string name="clickthebutton">Click to start barcode</string>
    <string name="title_activity_splash">Splash</string>
    <string name="breakfast">Breakfast</string>
    <string name="Lunch">Lunch</string>
    <string name="Dinner">Dinner</string>
    <string name="login">Debug Login</string>
    <string name="day">Monday</string>
    <string name="loginscreen">Login</string>
    <string name="pref_default_age_key">20</string>
    <string name="pref_age_key">age</string>
    <string name="pref_age_title">Age</string>
    <string name="height_required">Height Required</string>
    <string name="age_required">Age Required</string>
    <string name="reset">reset</string>

    <!--end of scanner strings-->

</resources>
