<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/light_orange"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:weightSum="4"
        android:id="@+id/linear1">

        <Button
            android:layout_width="wrap_content"
            android:id="@+id/dailyplan"
            android:layout_weight="2"
            android:text="@string/dailyplan"
            android:drawableTop="@drawable/ic_schedule_white_36dp"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="wrap_content"
            android:id="@+id/calc"
            android:layout_weight="2"
            android:text="@string/calc"
            android:drawableTop="@drawable/ic_keyboard_white_36dp"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear1"
        android:weightSum="4"
        android:id="@+id/linear2">
    <Button
        android:layout_width="wrap_content"
        android:id="@+id/tips"
        android:layout_weight="2"
        android:text="@string/tips"
        android:drawableTop="@drawable/ic_error_white_36dp"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="wrap_content"
        android:id="@+id/diary"
        android:layout_weight="2"
        android:text="@string/diary"
        android:drawableTop="@drawable/ic_content_paste_white_36dp"
        android:layout_height="wrap_content" />
    </LinearLayout>

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear3"
        android:layout_weight="2"
        android:weightSum="6"
        android:layout_below="@+id/linear2">
    <Button
        android:layout_width="wrap_content"
        android:id="@+id/about"
        android:text="@string/about"
        android:drawableTop="@drawable/ic_action_code"
        android:layout_weight="2"
        android:layout_height="wrap_content" />
    </LinearLayout>-->


</RelativeLayout>
