<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nutricalculator.Calories"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inner_relative_layout"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_action_person"
                android:drawableLeft="@drawable/ic_action_person"
                android:ems="10"
                android:maxLength="5"
                android:inputType="numberDecimal"
                android:hint="@string/wt"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_height"
            android:layout_width="wrap_content"
            android:layout_below="@+id/text_input_layout_weight"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="5"
                android:ems="10"
                android:inputType="numberDecimal"
                android:drawableStart="@drawable/ic_action_person"
                android:drawableLeft="@drawable/ic_action_person"
                android:hint="@string/ht"/>
        </android.support.design.widget.TextInputLayout>



        <Button
            android:layout_width="wrap_content"
            android:text="@string/calculator"
            android:layout_height="wrap_content"
            android:id="@+id/calculate"
            android:textColor="@color/white"
            android:background="@color/accent_material_light"
            android:layout_below="@+id/text_input_layout_height"/>

        <Button
            android:layout_width="wrap_content"
            android:text="@string/reset"
            android:layout_height="wrap_content"
            android:id="@+id/reset"
            android:background="@color/button_material_light"
            android:layout_alignTop="@+id/calculate"
            android:layout_alignRight="@+id/text_input_layout_height"
            android:layout_alignEnd="@+id/text_input_layout_height" />
    </RelativeLayout>



</RelativeLayout>
